# funrobo_kinematics

./: README.md  pyproject.toml
funrobo_kinematics/core/: arm_models.py  visualizer.py
funrobo_kinematics/projects/: __init__.py
funrobo_kinematics/projects/mp1/: five_dof.py  six_dof.py
projects/mp1/: __init__.py  five_dof.py
scripts/: three_dof_fk.py
tests/: test_fk.py  test_hiwonder.py  test_two_dof.py
