[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funrobo_kinematics"
version = "0.1.0"
description = "Fun robotics kinematics utilities for teaching"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pygame",
  "pyyaml",
  "ipython",
]

[tool.setuptools]
packages = [
  "funrobo_kinematics",
  "funrobo_kinematics.core",
  "funrobo_kinematics.projects",
  "funrobo_kinematics.projects.mp1",
]

[tool.setuptools.package-dir]
"funrobo_kinematics" = "funrobo_kinematics"
